@@ -67,6 +67,7 @@ TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT) \
 	LSAN_OPTIONS=suppressions=gnutls-asan.supp		\
 	GNUTLS_TEST_SUITE_RUN=1					\
 	OPENSSL_ia32cap=0x00000000				\
+	GNUTLS_SYSTEM_PRIORITY_FILE=$(srcdir)/../system.prio	\
 	top_builddir="$(top_builddir)"				\
 	srcdir="$(srcdir)"
 
