@@ -21,7 +21,8 @@ See the end for copying conditions.
    TLS 1.3 in setups where GOST ciphersuites are enabled on GnuTLS-based servers.
 
 ** libgnutls: The min-verification-profile from system configuration applies
-   for all certificate verifications, not only under TLS.
+   for all certificate verifications, not only under TLS. The configuration can
+   be overriden using the GNUTLS_SYSTEM_PRIORITY_FILE environment variable.
 
 ** certtool: Added the --verify-profile option to set a certificate
    verification profile. Use '--verify-profile low' for certificate verification
